<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yyh_app_name">YYHAccountSDK</string>
    <string name="yyh_menu_settings">Settings</string>
    <string name="yyh_noemail_nophone">抱歉，您的帐号未绑定手机或邮箱，无法找回密码，如有疑问请致电15811563062</string>
    <string name="yyh_retrieve_psw">找回您的密码</string>
    <string name="yyh_hasemail_tips">应用汇将发送重置密码链接到%1$s</string>
    <string name="yyh_guanliyuan">管理员</string>
    <string name="yyh_dianjifuzhi">点击复制</string>
    <string name="yyh_jiazaizhong">加载中…</string>
    <string name="yyh_lijixiazai">下载</string>
    <string name="yyh_jiazaigengduo">加载更多</string>
    <string name="yyh_huodong">活动</string>
    <string name="yyh_jinnang">锦囊</string>
    <string name="yyh_kefu">客服</string>
    <string name="yyh_jingpin">精品</string>
    <string name="yyh_shouye">首页</string>
    <string name="yyh_xialashuaxin">下拉刷新</string>
    <string name="yyh_shangcigengxin">上次更新</string>
    <string name="yyh_xiugai0">>立即修改</string>
    <string name="yyh_xiugaimima">修改密码</string>
    <string name="yyh_shurujiumima">输入旧密码(6&#8211;18位)</string>
    <string name="yyh_shuruxinmima">输入新密码(6&#8211;18位)</string>
    <string name="yyh_querenxiugai">确认修改</string>
    <string name="yyh_lijibangding">>立即绑定</string>
    <string name="yyh_shoujibangding">修改手机绑定</string>
    <string name="yyh_ninweibangdingshouji">（您未绑定手机）</string>
    <string name="yyh_huoquyanzhengma">获取验证码</string>
    <string name="yyh_shurushoujihao">输入手机号</string>
    <string name="yyh_yuanshishoujihao">原始手机号</string>
    <string name="yyh_yanzhengyuanshouji">验证原手机</string>
    <string name="yyh_shuruyanzhengma">输入验证码</string>
    <string name="yyh_shuruqqhao">输入QQ号</string>
    <string name="yyh_wanchengbangding">完成绑定</string>
    <string name="yyh_ninweibangdingyouxiang">您未绑定邮箱</string>
    <string name="yyh_ninweibangdingqq">（您未绑定QQ）</string>
    <string name="yyh_youxiangbangding">邮箱绑定</string>
    <string name="yyh_qqbangding">修改QQ绑定</string>
    <string name="yyh_shuruyouxiangdizhi">输入邮箱地址</string>
    <string name="yyh_zhuxiao">>注销</string>
    <string name="yyh_qiehuanzhanghao">切换账号</string>
    <string name="yyh_querenzhuxiao">确认注销您当前帐号?</string>
    <string name="yyh_queren">确认</string>
    <string name="yyh_denglu">登录游戏</string>
    <string name="yyh_zhuce">注册账号</string>
    <string name="yyh_shuruyonghuming">输入用户名、手机号或邮箱帐号</string>
    <string name="yyh_shurumima">输入密码(6&#8211;18位)</string>
    <string name="yyh_jizhudenglumima">记住登录密码</string>
    <string name="yyh_wangjimima">忘记密码？</string>
    <string name="yyh_kuaisuyouxi">快速游戏</string>
    <string name="yyh_kuaisuzhuce">快速注册</string>
    <string name="yyh_lijidenglu">立即登录</string>
    <string name="yyh_fanhuidenglu">返回登录</string>
    <string name="yyh_xiayibu">下一步</string>
    <string name="yyh_fasongzhishouji">发送至手机:</string>
    <string name="yyh_shangyibu">上一步</string>
    <string name="yyh_xiugai1">修改</string>
    <string name="yyh_bangdingshouji">绑定手机提高安全</string>
    <string name="yyh_bangdingshoujihao">绑定手机号:</string>
    <string name="yyh_lijizhuce">立即注册</string>
    <string name="yyh_huluebangding">忽略绑定</string>
    <string name="yyh_disanfangdenglu">第三方登陆</string>
    <string name="yyh_dialog_now_show">本次活动不再提醒</string>
    <string name="yyh_header_back">返回</string>
    <string name="yyh_notips_msg">锦囊为空</string>
    <string name="yyh_personal_more">服务内容?</string>
    <string name="yyh_login_dialog_layout_hint_username">手机号&#047;用户名</string>
    <string name="yyh_login_dialog_layout_hint_password">密码:</string>
    <string name="yyh_login_dialog_layout_tv_btn_regiser">一秒注册</string>
    <string name="yyh_login_dialog_layout_tv_btn_login">登录</string>
    <string name="yyh_login_dialog_layout_tv_btn_cell_register">手机号一键注册</string>
    <string name="yyh_login_dialog_layout_cell_auto_tip">您的手机号已注册，密码是******，为便于记忆，请修改密码</string>
    <string name="yyh_login_dialog_layout_cell_auto_hint">输入密码:</string>
    <string name="yyh_login_dialog_layout_cell_auto_tv_btn_login_now">立即登陆</string>
    <string name="yyh_login_dialog_layout_cell_un_auto_hint">手机号:输入手机号</string>
    <string name="yyh_login_dialog_layout_cell_un_auto_tv_btn_captcha">获取验证码</string>
    <string name="yyh_login_dialog_layout_cell_un_auto_captcha">验证码：输入验证码</string>
    <string name="yyh_login_dialog_layout_cell_un_auto_psw">密码：输入6&#8211;20个字符</string>
    <string name="yyh_login_dialog_layout_tv_btn_cell_auto_get_captcha">60秒后重发</string>
    <string name="yyh_login_dialog_layout_normal_register_username">账号:</string>
    <string name="yyh_login_dialog_layout_normal_register_psw">密码:</string>
    <string name="yyh_login_dialog_layout_normal_register_bind_cell">绑定手机号</string>
    <string name="yyh_login_dialog_layout_normal_register_login">立即注册&#038;登陆</string>
    <string name="yyh_login_dialog_layout_also_tip">您还可以使用</string>
    <string name="yyh_switch_account_crt_tip">当前账号 </string>
    <string name="yyh_switch_account">切换账号</string>
    <string name="yyh_switch_account_register_tip">您可以创建账号</string>
    <string name="yyh_switch_account_register_new">创建账号</string>
    <string name="yyh_tv_btn_normal_register_login_bind_phone">完成绑定</string>
    <string name="yyh_tv_btn_normal_register_login_bind_phone_cancel">忽略绑定</string>
    <string name="yyh_tv_reset_passward">找回您的密码</string>
    <string name="yyh_tv_btn_rl_reset_psw_phone_btn_left">返回登陆</string>
    <string name="yyh_tv_btn_rl_reset_psw_phone_btn_right">下一步</string>
    <string name="yyh_sub_account_msg">您目前没有小号</string>
    <string name="yyh_listview_more">加载更多</string>
    <string name="yyh_tips_recommend">相关推荐</string>
    <string name="yyh_install_appchina_tip">安装提示</string>
    <string name="yyh_install_appchina_btn">立即安装</string>
    <string name="yyh_install_appchina_msg">已为您准备好应用汇游戏服务框架，安装以进入游戏</string>
    <string name="yyh_auto_login">登录中...</string>
    <string name="yyh_toolbar_center">个人中心</string>
    <string name="yyh_toolbar_help">客服</string>
    <string name="yyh_toolbar_active">活动</string>
    <string name="yyh_toolbar_tip">锦囊</string>
    <string name="yyh_toolbar_boutique">精品</string>
    <string name="yyh_toolbar_pay">粮饷</string>
    <string name="yyh_loading">加载中……</string>
    <string name="yyh_kaishixiaz">开始下载</string>
    <string name="yyh_yue">现存粮饷：</string>
    <string name="yyh_jilu">充值记录：</string>
    <string name="yyh_yue_yyhdou">余额：</string>
    <string name="yyh_chongzhi">充值</string>
    <string name="yyh_yue_yyhdou_count">0 豆</string>
    <string name="yyh_yue_wenan">雄厚的粮饷存储备是游戏中叱咤风云的基础哦~</string>
    <string name="yyh_openshop_tip">充值后的应用豆可作为游戏中的储备资金，用以道具购买和游戏消费等，助您在游戏中叱咤风云。</string>
    <string name="yyh_date">14-07-05</string>
    <string name="yyh_how_much">100元</string>
    <string name="yyh_record_detail">详情</string>
    <string name="yyh_chongzhi_tixing1">啊哦~~您还没有充值记录啊\n点下面的按钮\n享受不一样的游戏体验！</string>
    <string name="yyh_chongzhi_tixing2">速去商城充值吧！</string>
    <string name="yyh_chongzhi_more">更多记录</string>
    <string name="yyh_pay_jiaoyishijian">交易时间：</string>
    <string name="yyh_pay_jiaoyiliushuihao">交易流水号：</string>
    <string name="yyh_pay_jiaoyijine">交易金额：</string>
    <string name="yyh_pay_jiaoyizhuangtai">交易状态：</string>
    <string name="yyh_pay_yingyongmingcheng">应用名称：</string>
    <string name="yyh_pay_zhifufangshi">支付方式：</string>

</resources>